# G-Keymap

./: LICENSE  README.md
Reference Code/keymap/keyTouch-1.1/: AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.cache  config.h  config.status  configure  configure.in  keytouch.glade.bak  keytouch.gladep.bak  keytouch.sh
Reference Code/keymap/keyTouch-1.1/autom4te.cache/: output.0  traces.0
Reference Code/keymap/keyTouch-1.1/config/: 801.Arowana  Aspire 1350.Acer  Cordless iTouch.Logitech  Deluxe Access.Logitech  Internet Navigator.Logitech  KB-0133.Compaq  Professional Multimedia Keyboard sw-20.Sweex  config  plugins
Reference Code/keymap/keyTouch-1.1/doc/: Manual.html
Reference Code/keymap/keyTouch-1.1/keytouch-plugin/: Makefile  keytouch-plugin.h  main.c  makefile.default
Reference Code/keymap/keyTouch-1.1/macros/: Makefile.in
Reference Code/keymap/keyTouch-1.1/plugins/: Makefile  WWW.c  XMMS.c  aumix-mute.c  aumix-volume.c  check_desktop.c  check_desktop.h  filemanager.c  keytouch-plugin.h  lock_screen.c  start_prog.c
Reference Code/keymap/keyTouch-1.1/po/: Makefile  Makefile.in  keytouch.pot
Reference Code/keymap/keyTouch-1.1/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  check_desktop.c  check_desktop.h  config.c  handle_error.c  interface.c  interface.h  keyboard.c  keyboard_config.c  keyboard_config.h  keyboard_list.c  keyboard_list.h  keys.c  keytouch.h  main.c  plugin.c  plugin_list.c  plugin_list.h  run_browser.c  set_data.c  set_data.h  xmodmap_list.c  xmodmap_list.h
Reference Code/keymap/keytouch-2.2.4/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in
Reference Code/keymap/keytouch-2.2.4/keyboards/: 3011A Wireless Optical Desktop.Trust  8193.BTC  9000A.BTC  9116.BTC  A6VA.Asus  Access Keyboard.Logitech  Amilo 1437.Fujitsu-Siemens  Amilo 2030.Fujitsu-Siemens  Aspire 1300.Acer  Aspire 1350.Acer  Aspire 1360.Acer  Aspire 1410.Acer  Aspire 1520.Acer  Aspire 3000.Acer  Aspire 3500.Acer  Comfort Curve Keyboard 2000.Microsoft  Comfy KB-09e (KB-0138).Genius  Comfy KB-21e (KL-0210).Genius  Cordless Access Keyboard.Logitech  Cordless Desktop Express.Logitech  Cordless Desktop LX 500.Logitech  Cordless Desktop LX 501.Logitech  Cordless Desktop LX 700.Logitech  Cordless Desktop MX 5000 (USB).Logitech  Cordless Desktop Optical (Y-RK56A).Logitech  Cordless Desktop Pro.Logitech  Cordless Keyboard (Y-RE20).Logitech  Cordless Navigator.Logitech  CyMotion Expert.Cherry  CyMotion Master Linux.Cherry  CyMotion Master Plus9.Cherry  CyMotion Master Solar.Cherry  CyMotion Master Xpress.Cherry  CyMotion PRO keyboard.Cherry  Cybo@rd G83-13000.Cherry  D47K.Promedion  Deluxe Access.Logitech  Deluxe Plus.Logitech  Digital Media Keyboard.Microsoft  Digital Media Pro Keyboard.Microsoft  (+68 more)
Reference Code/keymap/keytouch-2.2.4/keytouch-acpid/: ChangeLog  Makefile.am  Makefile.in  acpi_key_list.c  config.c  error.c  keytouch-acpid.h  main.c  memory.c  ud_socket.c
Reference Code/keymap/keytouch-2.2.4/keytouch-config/: ChangeLog  Makefile.am  Makefile.in  applications.menu  config.h  configure  configure.in  keytouch.glade  keytouch.glade2  keytouch.gladep
Reference Code/keymap/keytouch-2.2.4/keytouch-init/: ChangeLog  Makefile.am  Makefile.in  config.c  error.c  getfd.c  getfd.h  keytouch-init.h  keytouch-init.sh  main.c  memory.c  setkeycodes.c
Reference Code/keymap/keytouch-2.2.4/keytouch-keyboard/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h  configure  configure.in  keytouch-keyboard  keytouch-keyboard.glade  keytouch-keyboard.gladep
Reference Code/keymap/keytouch-2.2.4/keytouchd/: ChangeLog  Makefile.am  Makefile.in  config.c  error.c  grab_keys.c  handle_key.c  key_settings.c  keytouchd.h  main.c  memory.c  plugin.c  plugin.h
Reference Code/keymap/keytouch-2.2.4/mxml/: Makefile.in  content.c  document.c  error.c  mxml.h  parse.c  write.c
Reference Code/keymap/keytouch-2.2.4/plugins/: ChangeLog  KDE_switch_desktop.c  Makefile.in  amarok.c  amixer-plugin.h  amixer.c  audacious.c  browser.c  chat.c  check_desktop.c  common_actions.c  email.c  f_keys.c  filemanager.c  lock_screen.c  plugin.h  rhythmbox.c  scroll.c  xmms.c  zoom.c
Reference Code/keymap/keytouch-2.2.4/string_to_keycode/: keys.h  string_to_keycode.c  string_to_keycode.h
Reference Code/keymap/keytouch-editor-3.2.0-beta/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.h  configure  configure.in  keytouch-editor  keytouch-editor.glade  keytouch-editor.gladep
Reference Code/keymap/keytouch-editor-3.2.0-beta/mxml/: element.c  memory.c
Reference Code/keymap/keytouch-editor-3.2.0-beta/po/: Makefile.in  POTFILES  POTFILES.in  de.po  ga.po  hu.po  it.po  keytouch-editor-bin.pot  nl.po  sv.po  vi.po
Reference Code/keymap/keytouch-editor-3.2.0-beta/src/: Makefile.am  Makefile.in  acpi.c  acpi.h  callbacks.c  callbacks.h  check_syntax.c  check_syntax.h  config.c  config_element_types.h  default_key_settings.c  email.c  email.h  error.c  evdev.c  evdev.h  get_scancode.c  getscancode.h  gui.h  interface.c  interface.h  key_list.c  keycodes.c  keytouch-editor.h  main.c  memory.c  plugins.c  set_data.c  set_data.h  ud_socket.c
Reference Code/lineak/klineakconfig-0.9/icons/: Makefile.am  (+3 more)
Reference Code/lineak/lineak-defaultplugin-0.9/: ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  config.h.in  configure  configure.in  configure.in.in  configure.in.in.old  lineak_defaultplugin-mdk.spec  lineak_defaultplugin.spec  media-detect.conf  subdirs
Reference Code/lineak/lineak-kdeplugins-0.9/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  configure.in.in  configure.in.in.old  lineak_kdeplugins-mdk.spec  lineak_kdeplugins.1  lineak_kdeplugins.spec  lineak_plugins.kdevprj  lineak_plugins.lsm  subdirs
Reference Code/lineak/lineak-xosdplugin-0.9/: Makefile.am  Makefile.in  README  acinclude.m4  config.h.in  configure  configure.in  configure.in.in  configure.in.in.old  lineak_xosdplugin-mdk.spec  lineak_xosdplugin.spec  subdirs
(+405 files in other folders)
